--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,15 @@
   </head>
   <body>
     <h1>Cash Book Express</h1>
-
+    <div class="links">
+      <p><a href="/api/transactions">Transactions</a></p>
+      <p><a href="/api/debts">Debts</a></p>
+    </div>
     <h2>Transactions</h2>
     <div class="transactions" id="transactions"></div>
     <h2>Debts</h2>
     <div class="debts" id="debts"></div>
-    <script src="public/indexscript.js"></script>
+
+    <script src="indexscript.js"></script>
   </body>
 </html>
